@@ -831,6 +831,11 @@
 
 	* gcc.dg/tree-ssa/forwprop-17.c: New testcase.
 
+2012-04-23  Richard Guenther  <rguenther@suse.de>
+
+	PR c/53060
+	* gcc.dg/pr53060.c: New testcase.
+
 2012-03-12  Andrew Pinski  <apinski@cavium.com>
 
 	* gcc.dg/tree-ssa/phi-opt-7.c: New testcase.
