@@ -1772,6 +1772,11 @@
 	* tree-ssa-forwprop.c (simplify_bitwise_binary): Simplify (A & B) OP0
 	(C & B) to (A OP0) & B.
 
+2012-04-23  Richard Guenther  <rguenther@suse.de>
+
+	PR c/53060
+	* c-typeck.c (build_binary_op): Fix typo.
+
 2012-05-04  Andrew Pinski  <apinski@cavium.com>
 
 	* expr.c (get_def_for_expr_class): New function.
